--- a/ecocarhmi/pubspec.yaml
+++ b/ecocarhmi/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
   usb_serial: ^0.2.3
   font_awesome_flutter: ^8.5.0
 
-  mlkit: ^0.15.0
-  speech_recognition: ^0.3.0+1
-  flutter_tts: ^0.8.7
+  #mlkit: ^0.15.0
+  #speech_recognition: ^0.3.0+1
+  #flutter_tts: ^0.8.7
 
   cupertino_icons: ^0.1.2
 
@@ -28,4 +28,9 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: fonts/Open_Sans/OpenSans-Regular.ttf
 
