--- a/ecocarhmi/android/app/src/main/AndroidManifest.xml
+++ b/ecocarhmi/android/app/src/main/AndroidManifest.xml
@@ -26,5 +26,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.mapbox.token" android:value="pk.eyJ1Ijoic3RhcmtjMSIsImEiOiJjazZ0dHU4eXgwMnc0M3BxYzR1bmI3dXlxIn0.uH8qi9QOwMawXFCkxrZpQg" />
     </application>
 </manifest>
