--- a/ecocarhmi/android/app/src/profile/AndroidManifest.xml
+++ b/ecocarhmi/android/app/src/profile/AndroidManifest.xml
@@ -7,5 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
     <!-- <uses-permission android:name="android.hardware.location.gps" /> -->
 </manifest>
