--- a/ecocarhmi/pubspec.yaml
+++ b/ecocarhmi/pubspec.yaml
@@ -14,9 +14,10 @@ dependencies:
   provider: ^2.0.1
   usb_serial: ^0.2.3
   font_awesome_flutter: ^8.5.0
-
+  camera: ^0.5.7+4
+  firebase_ml_vision: ^0.9.3+8
   google_maps_flutter: ^0.5.24
-  mapbox_gl: ^0.0.5
+  #mapbox_gl: ^0.0.5
   flare_flutter: ^2.0.1
   permission_handler: ^4.0.0
   geolocator: ^5.1.5
