--- a/ecocarhmi/pubspec.yaml
+++ b/ecocarhmi/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flare_flutter: ^2.0.1
   permission_handler: ^4.0.0
   geolocator: ^5.1.5
+  path_provider: ^1.6.5
   #location: ^2.5.3
 
   #mlkit: ^0.15.0
