--- a/ecocarhmi/android/app/src/profile/AndroidManifest.xml
+++ b/ecocarhmi/android/app/src/profile/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-feature android:name="android.hardware.camera" />
     <!-- <uses-permission android:name="android.hardware.location.gps" /> -->
 </manifest>
