--- a/ecocarhmi/pubspec.yaml
+++ b/ecocarhmi/pubspec.yaml
@@ -19,17 +19,17 @@ dependencies:
   google_maps_flutter: ^0.5.24
   #mapbox_gl: ^0.0.5
   flare_flutter: ^2.0.1
-  permission_handler: ^4.0.0
+  permission_handler: ^3.2.0
   geolocator: ^5.1.5
   path_provider: ^1.6.5
   #location: ^2.5.3
   flutter_markdown: ^0.3.4
 
-  speech_to_text: ^1.1.0
+  #speech_to_text: ^1.1.0
 
   #mlkit: ^0.15.0
-  #speech_recognition: ^0.3.0+1
-  #flutter_tts: ^0.8.7
+  speech_recognition: ^0.3.0+1
+  flutter_tts: ^0.9.1
 
   cupertino_icons: ^0.1.2
 
